[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crafty = { path = "../crafty" }
recipe = { path = "../recipe" }
anyhow = "1.0.52"
clap = { version = "3.1", features = ["derive"] }
dialoguer = "0.10.0"
ctrlc = "3.2.1"
