[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crafty = { path = "../crafty" }
anyhow = "1.0.52"
clap = { version = "3.1", features = ["derive"] }
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
ctrlc = "3.2.1"
rayon = "1.5.2"

[[bin]]
name = "crafty"
path = "src/main.rs"