[package]
name = "crafty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
recipe = { path = "../recipe" }
phf = "0.10.0"
anyhow = "1.0.52"
rand = "0.8.4"

[build-dependencies]
recipe = { path = "../recipe" }
csv = "1.1.6"
phf_codegen = "0.10.0"
serde = { version = "1.0.132", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false