[package]
name = "crafty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
recipe = { path = "recipe" }
enum_indexing = { path = "enum_indexing" }
ts_type = { path = "../ts_type" }
phf = "0.10.0"
rand = { version = "0.8.4", features = ["small_rng"] }
serde = { version = "1.0.132", features = ["derive"] }
ordered-float = "4.2.0"

[build-dependencies]
recipe = { path = "recipe" }
csv = "1.1.6"
phf_codegen = "0.10.0"
serde = { version = "1.0.132", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
pprof = { version = "0.7", features = ["criterion", "flamegraph"] }

[[bench]]
name = "benchmark"
harness = false

[lib]
doctest = false
