[package]
name = "ts_type"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ts_type_derive = { path = "ts_type_derive" }
wasm-bindgen = "0.2.83"

[dev-dependencies]
quote = "1.0.21"

[lib]
doctest = false
bench = false