[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crafty = { path = "../crafty" }
serde = { version = "1.0.132", features = ["derive"] }
wasm-bindgen = "0.2.83"
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.4.3"

[lib]
crate-type = ["cdylib", "rlib"]
test = false
doctest = false
bench = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3']
