[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crafty = { path = "../crafty" }
ts_type = { path = "../ts_type" }
serde = { version = "1.0.132", features = ["derive"] }
wasm-bindgen = "0.2.83"
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.61"
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib", "rlib"]
test = false
doctest = false
bench = false

[package.metadata.wasm-pack.profile.release]
# Optimize for speed, not size
wasm-opt = ['-O3']
