[package]
name = "ts_type_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.100"
quote = "1.0.21"
serde_derive_internals = "0.26.0"
proc-macro2 = { version = "1.0.40", default-features = false }

[lib]
proc-macro = true
test = false
doctest = false
bench = false